--- a/src/app/tasks/lists-container/lists-container.component.less
+++ b/src/app/tasks/lists-container/lists-container.component.less
@@ -1,3 +1,11 @@
+@import "../../../styles.less";
+
+.project-list-item{
+  .list-item;
+  padding:8px;
+  font-size: @fontSize * 1.5;
+}
+
 #lists-container{
   display: flex;
   height: 100%;
