--- a/src/app/tasks/lists-container/projects/projects.component.less
+++ b/src/app/tasks/lists-container/projects/projects.component.less
@@ -1,12 +1,5 @@
 @import '../../../../styles.less';
-
-
-.project-list-item{
-  .list-item;
-  padding:8px;
-  font-size: @fontSize * 1.5;
-}
-
+@import "../lists-container.component.less";
 
 
 /* TODO: poprzenosić to jakoś  */
