--- a/src/app/tasks/tasks-container/tasks/tasks.component.html
+++ b/src/app/tasks/tasks-container/tasks/tasks.component.html
@@ -32,7 +32,7 @@
   >
     <div
       *ngFor="let task of getModel().getTasks()"
-      class="task-list-item list-item block transparent-border"
+      class="list-item"
       (click)="openDetails(task)"
       cdkDrag
     >
