--- a/src/app/shared/side-container/labels/labels.component.html
+++ b/src/app/shared/side-container/labels/labels.component.html
@@ -70,7 +70,7 @@
   />
 
   <div
-    class="list-item-options accept-button small-accept-button"
+    class="accept-item-icon"
     (click)="getEditing().acceptEditingLabel(label)"
     *ngIf="getEditing().isEditingOpen(label)"
   ></div>
