--- a/src/app/tasks/lists-container/special-lists/special-lists.component.html
+++ b/src/app/tasks/lists-container/special-lists/special-lists.component.html
@@ -1,19 +1,16 @@
-<div class="app-panel shadow list-panel">
+<div class="list-panel">
   <h4 class="panel-header">Listy</h4>
   <!-- TODO: zrobić sposób zaznaczania specjalnych list -->
   <div class="list">
     <div [ngClass]="{'selected-list-item': false,
-                'project': true,
-                'list-item':true,
-                'border-radius':true}"
+                'project-list-item': true}"
                 (click)='openList(type.IMPORTANT)'>
     <div class="list-item-value">Ważne</div>
   </div>
 
   <div [ngClass]="{'selected-list-item': false,
-                'project': true,
-                'list-item':true,
-                'border-radius':true}"
+                'project-list-item': true
+                }"
                 (click)='openList(type.TODAY)'>
     <div class="list-item-value">Dzisiaj</div>
   </div>
