--- a/src/app/tasks/tasks-container/kanban/kanban.component.html
+++ b/src/app/tasks/tasks-container/kanban/kanban.component.html
@@ -42,7 +42,7 @@
             <div
               cdkDrag
               *ngFor="let kanbanTask of getModel().getTasks(column)"
-              class="task-list-item list-item block"
+              class="list-item"
             >
               <ng-container
                 [ngTemplateOutlet]="task_item"
@@ -128,7 +128,7 @@
 <ng-template #new_kanban_task let-column>
   <input
     type="text"
-    class="form-control"
+    class="insert-input"
     id="new_task_input_{{ column.getId() }}"
     autocomplete="off"
     (keyup)="handleAddingNewTask($event)"
@@ -137,14 +137,14 @@
   />
   <div class="buttons-container">
     <button
-      class="button small-button insert-button"
+      class="simple-button"
       id="save-kanban-task-button"
       (click)="addTask(column)"
     >
       Zapisz
     </button>
     <button
-      class="button small-button insert-button"
+      class="simple-button"
       id="cancel-kanban-task-button"
       (click)="closeAddingNewTask()"
     >
@@ -198,7 +198,7 @@
 </ng-template>
 
 <ng-template #task_details let-task>
-  <div class="task-detauls-container">
+  <div class="horizontal-container">
     <div
       *ngIf="task.getDescription() != null"
       class="task-description-icon info-icon"
