--- a/src/styles.less
+++ b/src/styles.less
@@ -25,7 +25,7 @@
 @borderSize: 1px;
 @separatorColor: @color5;
 
-@editicon:url ("./assets/icons/edit-icon.png");
+@editIcon: url("./assets/icons/edit-icon.png");
 @removeIcon: url("./assets/icons/remove-icon.png");
 @acceptIcon: url("./assets/icons/accept-icon.png");
 // LISTA
