--- a/src/app/tasks/tasks-container/tasks/tasks.component.html
+++ b/src/app/tasks/tasks-container/tasks/tasks.component.html
@@ -110,7 +110,7 @@
         *ngFor="let stage of getModel().getProject().stages"
         [ngValue]="stage"
       >
-        {{ stage.getName() }}
+        {{ stage.name}}
       </option>
     </select>
   </div>
