Fix Project repository

--- a/src/app/tasks/lists-container/projects/projects.component.html
+++ b/src/app/tasks/lists-container/projects/projects.component.html
@@ -101,7 +101,7 @@
                     'border-radius': true}"
                     (click)='onProjectClick(project)'
                     >
-    <div class="list-item-value">{{project.getName()}}</div>
+    <div class="list-item-value">{{project.name}}</div>
     <div class="list-item-options"
       (click)='onProjectMenuClick($event, project)'
       [matMenuTriggerFor]="menu">
