--- a/src/app/tasks/tasks-container/calendar/calendar.component.html
+++ b/src/app/tasks/tasks-container/calendar/calendar.component.html
@@ -165,7 +165,7 @@
 </ng-template>
 
 <ng-template #task_item let-task>
-  <span class="task-name">{{task.getName()}}</span>
+  <span class="task-name">{{task.name}}</span>
   <ng-container [ngTemplateOutlet]="item_options"
   [ngTemplateOutletContext]="{ $implicit: task }"></ng-container>
 </ng-template>
