--- a/src/app/tasks/tasks-container/tasks/tasks.component.html
+++ b/src/app/tasks/tasks-container/tasks/tasks.component.html
@@ -214,7 +214,7 @@
     placement="bottom"
   >
     {{ task.getNumberOfSubtaskWithStatus(status.ENDED) }} /
-    {{ task.substaks.length }}
+    {{ task.subtasks.length }}
   </div>
 </ng-template>
 
